# PDC-Policy-Generator

./: .gitattributes  .gitignore  CHANGELOG.md  INSTALL.md  README.md  VERSION.md  install-into-pdc-demo.sh  install-pdc-demo.sh  lab-setup.docx  pyproject.toml
.github/workflows/: ci.yml
courseware/: README.md
courseware/CSCU/: README.md  Workshop-Policy-Generator-CSCU.docx  Workshop-Policy-Generator-CSCU.md
courseware/CSCU/tools/: build-docx.py  template.docx
docs/: CHANGELOG.md  CONTRACT.md  INSTALL.md  lab-setup.docx
docs/tools/: build-docx.py  render-diagrams.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: DocModal.jsx  ThemeSelect.jsx
frontend/src/pages/: AuthorPage.jsx  DeployPage.jsx  DriftPage.jsx  LoadPage.jsx  ReconcilePage.jsx
policy_generator/: __init__.py  api.py  app.py  author.py  cli.py  drift.py  pdc.py  registry.py  requirements.txt  run.bat  run.ps1  run.sh  selftest.py
policy_generator/templates/: index.html
tests/: conftest.py  test_api.py  test_docs.py  test_drift.py  test_engine.py
